--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,9 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ghcr.io/${{ github.repository }}/vite-frontend:latest .
-        docker push ghcr.io/${{ github.repository }}/vite-frontend:latest
+        IMAGE=ghcr.io/${{ github.actor }}/vite-frontend:latest
+        docker build -t $IMAGE .
+        docker push $IMAGE
 
     - name: Set up Kubeconfig
       run: |
